# cepwallet

./: .env.example  .eslintrc.cjs  .gitignore  01_README.md  02_README_KOHAKU.md  03_SUMMARY.md  04_GETTING_STARTED.md  05_PROJECT_STRUCTURE.md  06_TECHNICAL_ARCHITECTURE.md  09_ROADMAP.md  10_DOCUMENTATION_INDEX.md  11_QUICKSTART.md  12_INDEX.md  DEPRECATED_CODE_CLEANUP.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_STATUS.md  PHASE_0_START.md  QUICKSTART.md  README.md  TAURI_MIGRATION_COMPLETE.md  TAURI_MIGRATION_SUMMARY.md  create_icon.py  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  verify-build.sh  vite.config.ts  vitest.config.ts  webpack.config.js
.github/workflows/: build.yml  lint.yml  test.yml
bridge/: Cargo.toml  DEPRECATED.md  README.md
bridge/src/: device.rs  handlers.rs  main.rs  privacy.rs
bridge/src.old/: handlers.rs  main.rs  messages.rs  notes.rs  railgun.rs  session.rs  transaction.rs  trezor.rs
cepwallet/: README.md  package.json  pnpm-workspace.yaml
cepwallet/src/: main.tsx
cepwallet/src-tauri/src/: commands.rs
cepwallet/src/styles/: globals.css
docs/: ARCHITECTURE.md  DEVELOPMENT.md  DOCUMENTATION_ACTION_PLAN.md  DOCUMENTATION_REVIEW.md  GETTING_STARTED.md  HARDWARE.md  INDEX.md  PHASE_1_COMPLETE.md  PHASE_1_STEP_2_COMPLETE.md  PHASE_1_STEP_3_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_STEP_2_COMPLETE.md  PHASE_2_STEP_3_COMPLETE.md  PHASE_2_STEP_6_PLAN.md  PRIVACY_FEATURES.md  PRIVACY_UI_GUIDE.md  PROJECT_STRUCTURE.md  RAILGUN_INTEGRATION_TEST_REPORT.md  ROADMAP.md  SETUP_CI_CD.md  TREZOR_KOHAKU_INTEGRATION.md
docs/archive/: IMPLEMENTATION_ROADMAP.md  PHASE_0_COMPLETE.md  PHASE_0_INDEX.md  PHASE_1_PLAN.md  PHASE_1_STEP_1_COMPLETE.md  PHASE_1_STEP_4_COMPLETE.md  PHASE_1_STEP_5_COMPLETE.md  PHASE_1_STEP_6_COMPLETE.md  PHASE_2_PLAN.md  PHASE_2_STEP_1_COMPLETE.md  PHASE_2_STEP_4_COMPLETE.md  PHASE_2_STEP_5_COMPLETE.md  PHASE_2_STEP_5_PLAN.md  PHASE_2_STEP_6_COMPLETE.md
docs/kohaku/: DEFI_INTEGRATION.md  ERROR_HANDLING.md  HUMANIZER_USAGE.md  INDEX.md  RAILGUN_INTEGRATION.md  RAILGUN_SDK_RESEARCH.md  README.md  WALLET_OPERATIONS.md
docs/trezor/: QUICK_REFERENCE.md  README.md  SECURITY_ANALYSIS.md  SIGNING.md  TREZOR_CONNECT.md  TREZOR_SECRET_WALLET_INTEGRATION.md
proof-generator/: README.md  index-new.js  index-old.js  index.js  package-lock.json  package.json  test-ffi-integration.js  test-minimal.js  test-shield-simple.js  test-shield.js  test-simple.js  test-transfer.js  test-unshield.js  test-wallet.js  test.js
proof-generator/railgun_db/: 000010.ldb  000013.ldb  000016.ldb  000033.ldb  000038.ldb  000040.ldb  000042.ldb  LOG  LOG.old  MANIFEST-000044
proof-generator/test_railgun_db/: 000005.ldb  LOG  LOG.old  MANIFEST-000009
src/: App.js  App.js.old  App.tsx  main.js  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  icons  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/crypto/: mod.rs  wallet.rs
src-tauri/src/hardware/: device.rs  mod.rs  trezor.rs
src-tauri/src/privacy/: contracts.rs  ffi.rs  mod.rs  privacy_pools.rs  railgun.rs  types.rs  wallet.rs  zkproof.rs
src-tauri/src/utils/: mod.rs
src/api/: tauri.js  tauri.ts
src/components/Hardware/: TrezorConnect.js  (+1 more)
src/config/: contracts.js  contracts.ts
src/hooks/: useNavigation.js  useNavigation.ts  useRailgunWallet.js  useRailgunWallet.ts  useTrezorSecretWallet.js  useTrezorSecretWallet.ts  useWallet.js  useWallet.ts
src/pages/: DashboardPage.js  DashboardPage.tsx  PrivacyPage.js  PrivacyPage.tsx  SettingsPage.js  SettingsPage.tsx  TransactionsPage.js  TransactionsPage.tsx  WalletPage.js  WalletPage.tsx
src/services/: TransactionService.js  TransactionService.ts  TrezorSecretWallet.js  TrezorSecretWallet.ts
src/store/: walletStore.js  walletStore.ts
src/types/: index.js  index.ts  trezor.js  trezor.ts
src/utils/: demoConfig.js  demoConfig.ts  merkletree.js  merkletree.ts  notifications.js  notifications.ts  retry.js  retry.ts
(+39 files in other folders)
