[package]
name = "cepwallet"
version = "0.1.0"
description = "Privacy-First Hardware Wallet with Ethereum & Kohaku Integration"
authors = ["CepWallet Contributors"]
license = "GPL-3.0"
repository = "https://github.com/zinderud/cepwallet"
edition = "2021"
rust-version = "1.70"
default-run = "cepwallet"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Hardware dependencies
hidapi = { version = "2.4", features = ["linux-static-hidraw"] }

# Ethereum dependencies
ethers = { version = "2.0", features = ["legacy", "ws", "rustls"] }
ethers-contract = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"

# Crypto dependencies
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
hex = "0.4"
bs58 = "0.5"
aes-gcm = "0.10"

# Privacy / ZK-SNARK dependencies (future)
# ark-groth16 = "0.4"
# ark-bn254 = "0.4"
# ark-serialize = "0.4"

# Merkle tree
# rs-merkle = "1.4"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
